3-tier-kind-cluster/db-tier.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: production
spec:
  replicas: 1 # Statefull workloads generally scale via StatefulSets, keeping it simple as a 1-replica deployment for learning
  selector:
    matchLabels:
      tier: database
      app: mysql
  template:
    metadata:
      labels:
        tier: database
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
          name: mysqlport
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "500m" 
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
---

apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: production
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    tier: database
    app: mysql
  type: ClusterIP
