3-tier-kind-cluster/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: three-tier-ingress
  namespace: production
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 8080

      - path: /server
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 3001
